--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
 	    <groupId>org.postgresql</groupId>
 	    <artifactId>postgresql</artifactId>
 	    <version>42.6.0</version>
+	</dependency>	
+	<dependency>
+    	<groupId>commons-codec</groupId>
+    	<artifactId>commons-codec</artifactId>
+    	<version>1.16.0</version>
 	</dependency>
   </dependencies>
   <build>    
