--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
 	<dependency>
+    	<groupId>com.google.guava</groupId>
+    	<artifactId>guava</artifactId>
+    	<version>32.1.2-jre</version>
+	</dependency>
+	<dependency>
 	    <groupId>org.postgresql</groupId>
 	    <artifactId>postgresql</artifactId>
 	    <version>42.6.0</version>
