--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
 	<dependency>
+    	<groupId>org.projectlombok</groupId>
+    	<artifactId>lombok</artifactId>
+    	<version>1.18.28</version>
+    	<scope>provided</scope>
+	</dependency>
+	<dependency>
 	    <groupId>org.postgresql</groupId>
 	    <artifactId>postgresql</artifactId>
 	    <version>42.6.0</version>
