--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
 	<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter</artifactId>
+        <version>3.1.2</version>
+    </dependency>
+	<dependency>
     	<groupId>com.google.guava</groupId>
     	<artifactId>guava</artifactId>
     	<version>32.1.2-jre</version>
